# graspnet_ros

./: CMakeLists.txt  Dockerfile  Dockerfile-GRASPNESS  build_container.sh  demo.py  demo_test.py  package.xml  run_container.py  run_container.sh
launch/: container.launch  grasp_server.launch
msg/: Grasps.msg
src/: grasp_server.py
srv/: GetGrasps.srv
